# Madridsta

./: Cargo.toml  README.md  madridquiz.json
src/: main.rs
