[package]
name = "discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.11", features = ["collector", "client", "standard_framework", "framework", "rustls_backend"]}
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
env_logger = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = { version = "0.8.4", features = ["std", "small_rng", "std_rng"] }